Fixed lessonEditor having double scrollbar in FF

--- a/admin/styles/editor.css
+++ b/admin/styles/editor.css
@@ -33,7 +33,6 @@ header
 {
 	bottom: 0;
 	left: 0;
-	overflow-y: auto;
 	padding-top: 0;
 	position: absolute;
 	right: 0;
